[package]
name = "hydra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy_rapier2d = "0.21.0"
bevy_prototype_lyon = "0.8.0"
bevy_egui = "0.20.3"
bevy-inspector-egui = "0.18.3"
rand = "0.8.5"

[build-dependencies]
embed-resource = "2.1.1"